pylaform/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: pylaform
  name: pylaform
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: pylaform
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.1 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.service: pylaform
    spec:
      containers:
        - image: "ghcr.io/celesrenata/pylaform:latest"
          name: pylaform
          ports:
            - containerPort: 5000
          resources: {}
          volumeMounts:
            - mountPath: /app/data
              name: pylaform-data
      restartPolicy: Always
      volumes:
        - name: pylaform-data
          persistentVolumeClaim:
            claimName: pylaform-data
status: {}
