pylaform/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pylaform-http
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: default-redirectscheme@kubernetescrd
  labels:
    app: pylaform
spec:
  rules:
    - host: pylaform.celestium.life
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pylaform
                port:
                  number: 5000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pylaform-https
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: ca-issuer
  labels:
    app: pylaform
spec:
  rules:
    - host: pylaform.celestium.life
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pylaform
                port:
                  number: 5000
  tls:
    - hosts:
        - pylaform.celestium.life
      secretName: pylaform-cert
